# anytype-loader

./: LICENSE  README.md  anytype_loader.py  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml  tests.yml
anytype_loader/: __init__.py  exceptions.py  loader.py
examples/: usage.py
tests/: test_loader.py
tests/test_files/objects/: obj-1.json  obj-10.json  obj-2.json  obj-3.json  obj-4.json  obj-5.json  obj-6.json  obj-7.json  obj-8.json  obj-9.json
tests/test_files/spaces/: space_1.json
