[project]
name = "anytype-loader"
version = "1.0.0"
description = "LangChain document loader for Anytype spaces."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24,<1.0",
    "requests>=2.31,<3.0",
    "langchain-core>=0.1,<2.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1,<1.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=8.2",
]
